# BGA_crack_labelling

./: .gitignore  README.md  main.py  pyproject.toml
.claude/: settings.local.json
.claude/plans/: agents-md-update.md  registration-rework.md
docs/: AGENTS.md
src/notebooks/: 01_coordinate_exploration.ipynb  02_image_registration.ipynb  03_roi_extraction.ipynb  04_segmentation_prototype.ipynb
